--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ background: linear-gradient(90deg, transparent, #ff0000, transparent);
 transition: all 0.3s ease;
 background-color: #2d2d2d;
 color: #ffffff;
-border: 1px solid #800080;
+border: 1px solid #990000;
 cursor: pointer;
 }
 .tech-card:hover {
@@ -151,4 +151,8 @@ background-color: #3d3d3d !important;
 .logo-sesi{
 width: 100px;
 height: 100px;
+}
+.logos{
+width: 48px;
+height: 48px;
 }
